# python-template

./: Dockerfile  README.md  pyproject.toml  rename-package.sh
.githooks/: pre-commit
.github/workflows/: action.yml  build-docker.yml  build-docs.yml  deploy-docker.yml  deploy-docs-debug.yml  deploy-docs.yml  docs.yml  main.yml  pipeline.yml  test-python.yml  tests.yml
docs/: Makefile  conf.py  index.rst
docs/sources/: modules.rst  project.rst
src/mypackage/: __init__.py  __main__.py
src/project/: __init__.py  module.py
tests/: test_module.py
