[build-system]
requires = ["setuptools >= 61.0", "autosemver"]
# build-backend = "setuptools.build_meta"

[project]
dependencies = [
    "autosemver"
]
name = "mypackage"
dynamic = ["version"]
authors = [{ name = "John Doe", email = "johdoe@ceh.ac.uk" }]
description = "A minimal setup for a template package."

[project.optional-dependencies]
test = ["pytest", "pytest-cov", "parameterized"]
docs = ["sphinx", "sphinx-copybutton", "sphinx-rtd-theme"]
lint = ["ruff"]
dev = ["mypackage[test,docs,lint]"]

[tool.setuptools.dynamic]
version = { attr = "mypackage.__version__" }


[tool.setuptools.packages.find]
where = ["src"]
include = ["mypackage*"]

[tool.pytest.ini_options]

addopts = "--cov=mypackage"
markers = [
    "slow: Marks slow tests",
]

filterwarnings = [
    "ignore::DeprecationWarning:autosemver.*:",
    "ignore::DeprecationWarning:pkg_resources.*:",
]

[tool.coverage.run]
omit = ["*__init__.py"]

[tool.ruff]
src = ["src", "tests"]
include = ["src/**.py"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "ANN001", "ANN201", "ANN202", "ANN204", "ANN205", "ANN206"]

[tool.ruff.lint.flake8-type-checking]
strict = true